added cognitive load section

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,4 +1,94 @@
 
+@book{martin_clean_2009,
+	address = {Upper Saddle River, NJ},
+	title = {Clean {Code}: {A} {Handbook} of {Agile} {Software} {Craftsmanship}},
+	isbn = {978-0-13-235088-4},
+	shorttitle = {Clean {Code}},
+	publisher = {Prentice Hall},
+	editor = {Martin, Robert C.},
+	year = {2009},
+	keywords = {Agile software development, Computer software, Reliability},
+}
+
+@article{norton_ikea_2012,
+	title = {The {IKEA} {Effect}: {When} {Labor} {Leads} to {Love}},
+	volume = {22},
+	issn = {1057-7408, 1532-7663},
+	shorttitle = {The {Ikea} {Effect}},
+	url = {https://myscp.onlinelibrary.wiley.com/doi/10.1016/j.jcps.2011.08.002},
+	doi = {10.1016/j.jcps.2011.08.002},
+	abstract = {Abstract
+            
+              
+              In four studies in which consumers assembled IKEA boxes, folded origami, and built sets of Legos, we demonstrate and investigate boundary conditions for the IKEA effect—the increase in valuation of self‐made products. Participants saw their amateurish creations as similar in value to experts' creations, and expected others to share their opinions. We show that labor leads to love only when labor results in successful completion of tasks; when participants built and then destroyed their creations, or failed to complete them, the IKEA effect dissipated. Finally, we show that labor increases valuation for both “do‐it‐yourselfers” and novices.},
+	language = {en},
+	number = {3},
+	urldate = {2023-11-06},
+	journal = {Journal of Consumer Psychology},
+	author = {Norton, Michael I. and Mochon, Daniel and Ariely, Dan},
+	month = jul,
+	year = {2012},
+	pages = {453--460},
+}
+
+@article{norton_michael_nodate,
+	title = {{MICHAEL} {I}. {NORTON} {DANIEL} {MOCHON} {DAN} {ARIELY}},
+	abstract = {In a series of studies in which consumers assembled IKEA boxes, folded origami, and built sets of Legos, we demonstrate and investigate the boundary conditions for what we term the “IKEA effect” – the increase in valuation of self-made products. Participants saw their amateurish creations – of both utilitarian and hedonic products – as similar in value to the creations of experts, and expected others to share their opinions. Our account suggests that labor leads to increased valuation only when labor results in successful completion of tasks; thus when participants built and then destroyed their creations, or failed to complete them, the IKEA effect dissipated. Finally, we show that labor increases valuation of completed products not just for consumers who profess an interest in “do-it-yourself” projects, but even for those who are relatively uninterested. We discuss the implications of the IKEA effect for marketing managers and organizations more generally.},
+	language = {en},
+	author = {Norton, Michael I},
+}
+
+@incollection{van_der_aalst_historical_2008,
+	address = {Berlin, Heidelberg},
+	title = {Historical {Roots} of {Agile} {Methods}: {Where} {Did} “{Agile} {Thinking}” {Come} {From}?},
+	volume = {9},
+	isbn = {978-3-540-68254-7},
+	shorttitle = {Historical {Roots} of {Agile} {Methods}},
+	url = {http://link.springer.com/10.1007/978-3-540-68255-4_10},
+	urldate = {2023-10-21},
+	booktitle = {Agile {Processes} in {Software} {Engineering} and {Extreme} {Programming}},
+	publisher = {Springer Berlin Heidelberg},
+	author = {Abbas, Noura and Gravell, Andrew M. and Wills, Gary B.},
+	editor = {Van Der Aalst, Will and Mylopoulos, John and Sadeh, Norman M. and Shaw, Michael J. and Szyperski, Clemens and Abrahamsson, Pekka and Baskerville, Richard and Conboy, Kieran and Fitzgerald, Brian and Morgan, Lorraine and Wang, Xiaofeng},
+	year = {2008},
+	doi = {10.1007/978-3-540-68255-4_10},
+	note = {Series Title: Lecture Notes in Business Information Processing},
+	pages = {94--103},
+}
+
+@inproceedings{burg_1st_2013,
+	address = {San Francisco, CA},
+	title = {1st {International} workshop on live programming ({LIVE} 2013)},
+	isbn = {978-1-4673-3073-2},
+	url = {http://ieeexplore.ieee.org/document/6606771/},
+	doi = {10.1109/ICSE.2013.6606771},
+	urldate = {2023-10-23},
+	booktitle = {2013 35th {International} {Conference} on {Software} {Engineering} ({ICSE})},
+	publisher = {IEEE},
+	author = {Burg, Brian and Kuhn, Adrian and Parnin, Chris},
+	month = may,
+	year = {2013},
+	pages = {1529--1530},
+}
+
+@book{mccabe_towards_2023,
+	title = {Towards the {Humanisation} of {Programming} {Tool} {Interactions}},
+	volume = {2023},
+	copyright = {info:eu-repo/semantics/openAccess},
+	isbn = {9789180397759},
+	url = {http://lup.lub.lu.se/record/7fad955c-07b0-454d-b852-32d848cff209},
+	abstract = {Program analysis tools, from simple static semantic analysis by a compiler, to complex dynamic analyses of data flow and security, have become commonplace in modern day programming. Many of the simpler analyses, such as the afore- mentioned compiler checking or linters designed to enforce code style, may even go unnoticed or unconsidered by most users, ubiquitous as they are. Despite this, and despite the obvious utility that such programming tools can provide, many warnings provided by them go unheeded by programmers most of the time.{\textless}br/{\textgreater}There are several reasons for this phenomenon: the propensity to produce false positives undermines confidence in the validity of warnings, the tools do not in- tegrate well into the normal workflow of the developer, sometimes the warning message is simply too esoteric for most users to understand, and so on. A com- mon theme can be drawn from these reasons for ignoring the often-times very useful information given by a programming tool: the tool itself is difficult to use.{\textless}br/{\textgreater}In this thesis, we consider ways in which we can bridge this gap between users and tools. To do this, we draw from observations about the way in which we interact with each other in the most basic human-to-human context. Applying these lessons to a human-tool interaction allow us to examine ways in which tools may be deficient, and investigate methods for making the interaction more natural and human-like.{\textless}br/{\textgreater}We explore this issue by framing the interaction as a "conversation" between a human and their development environment. We then present a new programming tool, Progger, built using design principles driven by the "conversational lens" which we use to look at these interactions. After this, we present a user study using a novel low-cost methodology, aimed at evaluating the efficacy of the Progger tool. From the results of this user study, we present a new, more streamlined version of Progger, and finally investigate the way in which it can be used to direct the users attention when conducting a code comprehension exercise.},
+	language = {eng},
+	urldate = {2023-10-21},
+	publisher = {Lund University},
+	author = {McCabe, Alan},
+	year = {2023},
+	note = {ISSN: 1652-4691
+Issue: 2
+Number: 2
+Publication Title: Licentiate thesis},
+}
+
 @misc{mourzenko_why_2014,
 	title = {Why {We} {Need} {Throw}-{Away} {Prototyping}?},
 	shorttitle = {Answer to "{Why} {We} {Need} {Throw}-{Away} {Prototyping}?"},
@@ -311,21 +401,6 @@
 	pages = {1090--1101},
 }
 
-@inproceedings{burg_1st_2013,
-	address = {San Francisco, CA},
-	title = {1st {International} workshop on live programming ({LIVE} 2013)},
-	isbn = {978-1-4673-3073-2 978-1-4673-3076-3},
-	url = {http://ieeexplore.ieee.org/document/6606771/},
-	doi = {10.1109/ICSE.2013.6606771},
-	urldate = {2023-10-23},
-	booktitle = {2013 35th {International} {Conference} on {Software} {Engineering} ({ICSE})},
-	publisher = {IEEE},
-	author = {Burg, Brian and Kuhn, Adrian and Parnin, Chris},
-	month = may,
-	year = {2013},
-	pages = {1529--1530},
-}
-
 @phdthesis{hancock_real-time_2003,
 	type = {Thesis},
 	title = {Real-{Time} {Programming} and the {Big} {Ideas} of {Computational} {Literacy}},
@@ -517,24 +592,6 @@ ERIC Number: EJ1145017},
 	pages = {972--980},
 }
 
-@incollection{van_der_aalst_historical_2008,
-	address = {Berlin, Heidelberg},
-	title = {Historical {Roots} of {Agile} {Methods}: {Where} {Did} “{Agile} {Thinking}” {Come} {From}?},
-	volume = {9},
-	isbn = {978-3-540-68254-7 978-3-540-68255-4},
-	shorttitle = {Historical {Roots} of {Agile} {Methods}},
-	url = {http://link.springer.com/10.1007/978-3-540-68255-4_10},
-	urldate = {2023-10-21},
-	booktitle = {Agile {Processes} in {Software} {Engineering} and {Extreme} {Programming}},
-	publisher = {Springer Berlin Heidelberg},
-	author = {Abbas, Noura and Gravell, Andrew M. and Wills, Gary B.},
-	editor = {Van Der Aalst, Will and Mylopoulos, John and Sadeh, Norman M. and Shaw, Michael J. and Szyperski, Clemens and Abrahamsson, Pekka and Baskerville, Richard and Conboy, Kieran and Fitzgerald, Brian and Morgan, Lorraine and Wang, Xiaofeng},
-	year = {2008},
-	doi = {10.1007/978-3-540-68255-4_10},
-	note = {Series Title: Lecture Notes in Business Information Processing},
-	pages = {94--103},
-}
-
 @misc{noauthor_historical_nodate,
 	title = {Historical {Roots} of {Agile} {Methods}: {Where} {Did} “{Agile} {Thinking}” {Come} {From}? {\textbar} {SpringerLink}},
 	url = {https://link.springer.com/chapter/10.1007/978-3-540-68255-4_10},
@@ -577,24 +634,6 @@ ERIC Number: EJ1145017},
 	year = {2007},
 	keywords = {critical rationalism, evolutionary change, extreme programming, paradigm shift, scientific revolutions},
 	pages = {106--115},
-}
-
-@book{mccabe_towards_2023,
-	title = {Towards the {Humanisation} of {Programming} {Tool} {Interactions}},
-	volume = {2023},
-	copyright = {info:eu-repo/semantics/openAccess},
-	isbn = {9789180397759 9789180397766},
-	url = {http://lup.lub.lu.se/record/7fad955c-07b0-454d-b852-32d848cff209},
-	abstract = {Program analysis tools, from simple static semantic analysis by a compiler, to complex dynamic analyses of data flow and security, have become commonplace in modern day programming. Many of the simpler analyses, such as the afore- mentioned compiler checking or linters designed to enforce code style, may even go unnoticed or unconsidered by most users, ubiquitous as they are. Despite this, and despite the obvious utility that such programming tools can provide, many warnings provided by them go unheeded by programmers most of the time.{\textless}br/{\textgreater}There are several reasons for this phenomenon: the propensity to produce false positives undermines confidence in the validity of warnings, the tools do not in- tegrate well into the normal workflow of the developer, sometimes the warning message is simply too esoteric for most users to understand, and so on. A com- mon theme can be drawn from these reasons for ignoring the often-times very useful information given by a programming tool: the tool itself is difficult to use.{\textless}br/{\textgreater}In this thesis, we consider ways in which we can bridge this gap between users and tools. To do this, we draw from observations about the way in which we interact with each other in the most basic human-to-human context. Applying these lessons to a human-tool interaction allow us to examine ways in which tools may be deficient, and investigate methods for making the interaction more natural and human-like.{\textless}br/{\textgreater}We explore this issue by framing the interaction as a "conversation" between a human and their development environment. We then present a new programming tool, Progger, built using design principles driven by the "conversational lens" which we use to look at these interactions. After this, we present a user study using a novel low-cost methodology, aimed at evaluating the efficacy of the Progger tool. From the results of this user study, we present a new, more streamlined version of Progger, and finally investigate the way in which it can be used to direct the users attention when conducting a code comprehension exercise.},
-	language = {eng},
-	urldate = {2023-10-21},
-	publisher = {Lund University},
-	author = {McCabe, Alan},
-	year = {2023},
-	note = {ISSN: 1652-4691
-Issue: 2
-Number: 2
-Publication Title: Licentiate thesis},
 }
 
 @inproceedings{omar_active_2012,
