--- a/main.tex
+++ b/main.tex
@@ -27,6 +27,8 @@
 \usepackage[colorinlistoftodos]{todonotes}
 \usepackage{epigraph}
 \usepackage{svg}
+\usepackage{threeparttablex} % for "ThreePartTable" environment
+\usepackage{booktabs}        % for well-spaced horizontal rules
 %%%-----------------------------------------------------------------------------
 
 \newcommand{\addref}{\todo[color=red!40]{Add reference.}}
