completed todo-comments subsection

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,4 +1,59 @@
 
+@misc{karacic_todo_2015,
+	type = {Forum post},
+	title = {Do {Todo} {Comments} {Make} {Sense}?},
+	url = {https://softwareengineering.stackexchange.com/q/125320},
+	urldate = {2023-11-06},
+	journal = {Software Engineering Stack Exchange},
+	author = {Karačić, Ivan Crojach},
+	month = nov,
+	year = {2015},
+}
+
+@misc{snoop_does_2016,
+	type = {Forum post},
+	title = {Does {Anybody} {Still} {Use} {Todo} for {Writing} {Code} {Later} {On}?},
+	url = {https://softwareengineering.stackexchange.com/q/316797},
+	urldate = {2023-11-06},
+	journal = {Software Engineering Stack Exchange},
+	author = {Snoop},
+	month = apr,
+	year = {2016},
+}
+
+@misc{alecxe_how_2018,
+	type = {Forum post},
+	title = {How to {Handle} a {Todo} in a {Pull} {Request}?},
+	url = {https://softwareengineering.stackexchange.com/q/362286},
+	urldate = {2023-11-06},
+	journal = {Software Engineering Stack Exchange},
+	author = {alecxe},
+	month = dec,
+	year = {2018},
+}
+
+@misc{tackabury_how_2019,
+	type = {Forum post},
+	title = {How {Do} {You} {Flag} {Code} so {That} {You} {Can} {Come} {Back} {Later} and {Work} on {It}?},
+	url = {https://stackoverflow.com/q/335378},
+	urldate = {2023-11-06},
+	journal = {Stack Overflow},
+	author = {Tackabury, Jon},
+	month = dec,
+	year = {2019},
+}
+
+@misc{squires_use_2012,
+	type = {Forum post},
+	title = {Use of {NotImplementedException}},
+	url = {https://softwareengineering.stackexchange.com/q/128389},
+	urldate = {2023-11-06},
+	journal = {Software Engineering Stack Exchange},
+	author = {Squires, Tom},
+	month = jan,
+	year = {2012},
+}
+
 @book{martin_clean_2009,
 	address = {Upper Saddle River, NJ},
 	title = {Clean {Code}: {A} {Handbook} of {Agile} {Software} {Craftsmanship}},
