first chapter ready apart from hypothesis

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,4 +1,83 @@
 
+@inproceedings{northover_karl_2006,
+	address = {Berlin, Heidelberg},
+	series = {Lecture {Notes} in {Computer} {Science}},
+	title = {Karl {Popper}’s {Critical} {Rationalism} in {Agile} {Software} {Development}},
+	isbn = {978-3-540-35902-9},
+	doi = {10.1007/11787181_26},
+	abstract = {Sir Karl Popper’s critical rationalism – a philosophy in the fallibilist tradition of Socrates, Kant and Peirce – is applied systematically to illuminate the values and principles underlying contemporary software development. The two aspects of Popper’s philosophy, the natural and the social, provide a comprehensive and unified philosophical basis for understanding the newly emerged “agile” methodologies. It is argued in the first four sections of the paper – Philosophy of Science, Evolutionary Theory of Knowledge, Metaphysics, and The Open Society – that the agile approach to software development is strongly endorsed by Popper’s philosophy of critical rationalism. In the final section, the relevance of Christopher Alexander’s ideas to agile methodologies and their similarity to Popper’s philosophy is demonstrated.},
+	language = {en},
+	booktitle = {Conceptual {Structures}: {Inspiration} and {Application}},
+	publisher = {Springer},
+	author = {Northover, Mandy and Boake, Andrew and Kourie, Derrick G.},
+	editor = {Schärfe, Henrik and Hitzler, Pascal and Øhrstrøm, Peter},
+	year = {2006},
+	keywords = {Agile Practice, Agile Software Development, Open Society, Pair Programming, Social Engineering},
+	pages = {360--373},
+}
+
+@inproceedings{royce_managing_1987,
+	address = {Washington, DC, USA},
+	series = {{ICSE} '87},
+	title = {Managing the {Development} of {Large} {Software} {Systems}: {Concepts} and {Techniques}},
+	isbn = {978-0-89791-216-7},
+	shorttitle = {Managing the {Development} of {Large} {Software} {Systems}},
+	urldate = {2023-11-06},
+	booktitle = {Proceedings of the 9th international conference on {Software} {Engineering}},
+	publisher = {IEEE Computer Society Press},
+	author = {Royce, W. W.},
+	month = mar,
+	year = {1987},
+	pages = {328--338},
+}
+
+@article{boehm_spiral_1988,
+	title = {A {Spiral} {Model} of {Software} {Development} and {Enhancement}},
+	volume = {21},
+	issn = {1558-0814},
+	url = {https://ieeexplore.ieee.org/document/59},
+	doi = {10.1109/2.59},
+	abstract = {A short description is given of software process models and the issues they address. An outline is given of the process steps involved in the spiral model, an evolving risk-driven approach that provides a framework for guiding the software process, and its application to a software project is shown. A summary is given of the primary advantages and implications involved in using the spiral model and the primary difficulties in using it at its current incomplete level of elaboration.{\textless}{\textgreater}},
+	number = {5},
+	urldate = {2023-11-06},
+	journal = {Computer},
+	author = {Boehm, B. W.},
+	month = may,
+	year = {1988},
+	note = {Conference Name: Computer},
+	pages = {61--72},
+}
+
+@article{chen_continuous_2015,
+	title = {Continuous {Delivery}: {Huge} {Benefits}, but {Challenges} {Too}},
+	volume = {32},
+	issn = {1937-4194},
+	shorttitle = {Continuous {Delivery}},
+	url = {https://ieeexplore.ieee.org/abstract/document/7006384},
+	doi = {10.1109/MS.2015.27},
+	abstract = {Continuous delivery (CD) has emerged as an auspicious alternative to traditional release engineering, promising to provide the capability to release valuable software continuously to customers. Paddy Power has been implementing CD for the past two years. This article explains why Paddy Power decided to adopt CD, describes the resulting CD capability, and reports the huge benefits and challenges involved. These experiences can provide fellow practitioners with insights for their adoption of CD, and the identified challenges can provide researchers valuable input for developing their research agendas.},
+	number = {2},
+	urldate = {2023-11-06},
+	journal = {IEEE Software},
+	author = {Chen, Lianping},
+	month = mar,
+	year = {2015},
+	note = {Conference Name: IEEE Software},
+	pages = {50--54},
+}
+
+@book{beck_test-driven_2003,
+	address = {Boston},
+	series = {The {Addison}-{Wesley} signature series},
+	title = {Test-{Driven} {Development}: {By} {Example}},
+	isbn = {978-0-321-14653-3},
+	shorttitle = {Test-{Driven} {Development}},
+	publisher = {Addison-Wesley},
+	author = {Beck, Kent},
+	year = {2003},
+	keywords = {Computer programming, Computer software, Development, Testing},
+}
+
 @misc{karacic_todo_2015,
 	type = {Forum post},
 	title = {Do {Todo} {Comments} {Make} {Sense}?},
@@ -6246,7 +6325,7 @@ Conclusion Although the link between perspective type and detection of distress 
 	note = {OCLC: 1043552353},
 }
 
-@book{herczeg_software-ergonomie_2018,
+@book{herczeg_software-ergonomie_2018-1,
 	address = {Boston},
 	series = {De gruyter studium},
 	title = {Software-{Ergonomie}},
