--- a/main.tex
+++ b/main.tex
@@ -29,11 +29,13 @@
 \usepackage{svg}
 \usepackage{threeparttablex} % for "ThreePartTable" environment
 \usepackage{booktabs}        % for well-spaced horizontal rules
+\usepackage{seqsplit}
 %%%-----------------------------------------------------------------------------
 
 \newcommand{\addref}{\todo[color=red!40]{Add reference.}}
 \newcommand{\estimatedpagecount}[1]{\todo[color=blue!40]{Estimated Pages: #1}}
 \newcommand{\CS}{C\nolinebreak\hspace{-.05em}\raisebox{.6ex}{\scriptsize\bf \#}}
+\newcommand{\CC}{C\nolinebreak\hspace{-.05em}\raisebox{.4ex}{\tiny\bf +}\nolinebreak\hspace{-.10em}\raisebox{.4ex}{\tiny\bf +}}
 \newcommand{\textgreek}[1]{\begingroup\fontencoding{LGR}\selectfont#1\endgroup}
 
 %%%-----------------------------------------------------------------------------
