add PEP 350 - Codetags

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,4 +1,26 @@
 
+@misc{stack_overflow_stack_2023,
+	title = {Stack {Overflow} {Developer} {Survey} 2023},
+	url = {https://survey.stackoverflow.co/2023/?utm_source=social-share&utm_medium=social&utm_campaign=dev-survey-2023},
+	abstract = {In May 2023 over 90,000 developers responded to our annual survey about how they learn and level up, which tools they're using, and which ones they want.},
+	language = {en},
+	urldate = {2023-11-08},
+	journal = {Stack Overflow},
+	author = {{Stack Overflow}},
+	year = {2023},
+}
+
+@misc{tiobe_software_bv_tiobe_2023,
+	title = {{TIOBE} {Index} for {October} 2023},
+	url = {https://www.tiobe.com/tiobe-index/},
+	language = {en-US},
+	urldate = {2023-11-08},
+	journal = {TIOBE},
+	author = {{TIOBE Software BV}},
+	month = oct,
+	year = {2023},
+}
+
 @inproceedings{northover_karl_2006,
 	address = {Berlin, Heidelberg},
 	series = {Lecture {Notes} in {Computer} {Science}},
@@ -3262,7 +3284,7 @@ the programmer wants it to do. In reality a lot of steps happen until software d
 	pages = {2},
 }
 
-@incollection{wojtkowski_what_2007,
+@incollection{wojtkowski_what_2007-1,
 	address = {Boston, MA},
 	title = {What {Makes} a {Good} {Diagram}? {Improving} the {Cognitive} {Effectiveness} of {Diagrams} in {IS} {Development}},
 	isbn = {978-0-387-70801-0 978-0-387-70802-7},
