--- a/main.tex
+++ b/main.tex
@@ -49,7 +49,7 @@
 %\title{Partial Solutions to Universal Problems}
 \title{%
   Towards Hole-Driven Development in General Purpose Programming Languages \\
-  \large A Proof of Concept in C\#}
+  \texorpdfstring{\vskip .5cm \large A Proof of Concept in \CS}{-- A Proof of Concept in C\#}}
 \author{Bernhard Mayr}
 \programname{Mobile Computing}
 
