wip: languages with hole support

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,4 +1,54 @@
 
+@misc{redmon_coq_2021,
+	title = {Coq {Tactic} {Index}},
+	url = {https://pjreddie.com/coq-tactics/},
+	urldate = {2023-11-13},
+	author = {Redmon, Joseph},
+	month = oct,
+	year = {2021},
+}
+
+@misc{the_coq_development_team_proof_2023,
+	title = {Proof mode — {Coq} 8.18.0 documentation},
+	url = {https://coq.inria.fr/refman/proofs/writing-proofs/proof-mode.html#managing-goals},
+	urldate = {2023-11-13},
+	author = {{The Coq Development Team}},
+	month = sep,
+	year = {2023},
+}
+
+@misc{knispel_agda_2020,
+	title = {Agda vs. {Coq} vs. {Idris}},
+	url = {https://whatisrt.github.io/dependent-types/2020/02/18/agda-vs-coq-vs-idris.html},
+	abstract = {I haven’t written anything here in a while, which is mostly due to my paper about syntactic metaprogramming. It is close to being finished, but the remaining edits terrify me right now, so I thought I’d write my thoughts about this topic in hope that it will be useful to someone.},
+	language = {en},
+	urldate = {2023-11-13},
+	journal = {Meta-cedille blog},
+	author = {Knispel, Andre},
+	month = feb,
+	year = {2020},
+}
+
+@misc{the_agda_team_holes_2023,
+	title = {Holes and {Case} {Splitting} — {Agda} 2.6.4.1 {Documentation}},
+	url = {https://agda.readthedocs.io/en/latest/getting-started/a-taste-of-agda.html#holes-and-case-splitting},
+	urldate = {2023-11-13},
+	author = {{The Agda Team}},
+	month = nov,
+	year = {2023},
+}
+
+@misc{goldin_stop_2022,
+	title = {Stop {Using} {TODO} for {Everything}},
+	url = {https://goldin.io/blog/stop-using-todo},
+	abstract = {Encouraging programmers to stop using 'TODO' for everything in their comments that requires them to do something later.},
+	language = {en},
+	urldate = {2023-11-13},
+	author = {Goldin, Seth},
+	month = may,
+	year = {2022},
+}
+
 @book{floyd_software_1992,
 	address = {Berlin, Heidelberg},
 	title = {Software {Development} and {Reality} {Construction}},
