--- a/main.tex
+++ b/main.tex
@@ -37,7 +37,7 @@
 \newcommand{\textgreek}[1]{\begingroup\fontencoding{LGR}\selectfont#1\endgroup}
 
 \newlist{properties}{enumerate}{2}
-\setlist[properties,1]{label=HQ\arabic*.,ref=HQ\arabic*}
+\setlist[properties,1]{label=HP\arabic*.,ref=HP\arabic*}
 \setlist[properties,2]{label=(\alph*),ref=\thequestionsi(\alph*)}
 
 %%%-----------------------------------------------------------------------------
