--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,4 +1,35 @@
 
+@misc{koch_global_2021,
+	title = {Global {Usings} - {A} {Look} at {New} {Language} {Features} in {C}\# 10},
+	url = {https://blog.jetbrains.com/dotnet/2021/11/18/global-usings-in-csharp-10/},
+	abstract = {Welcome to the third part of our series, where we take a closer look at the new C\# language features the .NET team has implemented, and how ReSharper and Rider make it easy to adopt them in your codebase},
+	language = {en-US},
+	urldate = {2023-11-15},
+	journal = {The JetBrains Blog},
+	author = {Koch, Matthias},
+	month = nov,
+	year = {2021},
+}
+
+@misc{ghc_team_deferring_2023,
+	title = {Deferring {Type} {Errors} to {Runtime} — {Glasgow} {Haskell} {Compiler} {User}'s {Guide}},
+	url = {https://ghc.gitlab.haskell.org/ghc/doc/users_guide/exts/defer_type_errors.html},
+	urldate = {2023-11-14},
+	author = {{GHC Team}},
+	year = {2023},
+}
+
+@book{hunt_pragmatic_2000,
+	address = {Reading, Mass},
+	title = {The {Pragmatic} {Programmer}: {From} {Journeyman} to {Master}},
+	isbn = {978-0-201-61622-4},
+	shorttitle = {The {Pragmatic} {Programmer}},
+	publisher = {Addison-Wesley},
+	author = {Hunt, Andrew and Thomas, David},
+	year = {2000},
+	keywords = {Computer programming},
+}
+
 @misc{redmon_coq_2021,
 	title = {Coq {Tactic} {Index}},
 	url = {https://pjreddie.com/coq-tactics/},
