--- a/main.tex
+++ b/main.tex
@@ -116,7 +116,7 @@
 % Special page for checking print size
 %%%-----------------------------------------------------------------------------
 
-\include{back/printbox}
+%\include{back/printbox}
 
 %%%-----------------------------------------------------------------------------
 \end{document}
