--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,4 +1,103 @@
 
+@misc{microsoft_module_2023,
+	title = {Module initializers - {C}\# 9.0 draft feature specifications},
+	url = {https://learn.microsoft.com/en-us/dotnet/csharp/language-reference/proposals/csharp-9.0/module-initializers},
+	abstract = {This feature specification describes how to declare module initializers, which are methods called by the runtime when a module, or assembly, is loaded.},
+	language = {en-us},
+	urldate = {2023-11-16},
+	author = {{Microsoft}},
+	month = jun,
+	year = {2023},
+}
+
+@misc{microsoft_source_2023,
+	title = {Source {Generators} - {C}\#},
+	url = {https://learn.microsoft.com/en-us/dotnet/csharp/roslyn-sdk/source-generators-overview},
+	abstract = {Source Generators is a C\# compiler feature that lets C\# developers inspect user code as it is being compiled. Source generators create new C\# source files on the fly that are added to the user's compilation.},
+	language = {en-us},
+	urldate = {2023-11-16},
+	author = {{Microsoft}},
+	month = jun,
+	year = {2023},
+}
+
+@misc{microsoft_attributes_2022,
+	title = {Attributes {Interpreted} by the {C}\# {Compiler}: {Tracking} {Caller} {Information} - {C}\#},
+	shorttitle = {Attributes {Interpreted} by the {C}\# {Compiler}},
+	url = {https://learn.microsoft.com/en-us/dotnet/csharp/language-reference/attributes/caller-information},
+	abstract = {These attributes instruct the compiler to generate information about the code that calls a member. You use the CallerFilePath, CallerLineNumber, CallerMemberName, and CallerArgumentExpression to provide detailed trace information},
+	language = {en-us},
+	urldate = {2023-11-16},
+	author = {{Microsoft}},
+	month = jun,
+	year = {2022},
+}
+
+@misc{bahreini_should_2018,
+	title = {Should {I} {Take} {ILogger}, {ILogger}{\textless}{T}{\textgreater}, {ILoggerFactory} or {ILoggerProvider} for a {Library}?},
+	url = {https://stackoverflow.com/a/51394689},
+	urldate = {2023-11-15},
+	journal = {Stack Overflow},
+	author = {Bahreini, Hooman},
+	month = jul,
+	year = {2018},
+}
+
+@misc{microsoft_get_2021,
+	title = {Get started with semantic analysis - {C}\#},
+	url = {https://learn.microsoft.com/en-us/dotnet/csharp/roslyn-sdk/get-started/semantic-analysis},
+	abstract = {This tutorial provides an overview of working with semantic analysis using the .NET Compiler SDK.},
+	language = {en-us},
+	urldate = {2023-11-16},
+	author = {{Microsoft}},
+	month = sep,
+	year = {2021},
+}
+
+@misc{microsoft_c_2023,
+	title = {C\# {Compiler} {Options} - {Errors} and {Warnings}},
+	url = {https://learn.microsoft.com/en-us/dotnet/csharp/language-reference/compiler-options/errors-warnings},
+	abstract = {C\# Compiler Options for errors and warnings. These options suppress or enable warnings, and control warnings as errors.},
+	language = {en-us},
+	urldate = {2023-11-16},
+	author = {{Microsoft}},
+	month = nov,
+	year = {2023},
+}
+
+@misc{mozilla_http_2023,
+	title = {Http {Response} {Status} {Codes}},
+	url = {https://developer.mozilla.org/en-US/docs/Web/HTTP/Status},
+	abstract = {HTTP response status codes indicate whether a specific HTTP request has been successfully completed. Responses are grouped in five classes:},
+	language = {en-US},
+	urldate = {2023-11-16},
+	author = {{Mozilla}},
+	month = nov,
+	year = {2023},
+}
+
+@misc{microsoft_code_2023,
+	title = {Code {Analysis} {Using} {Roslyn} {Analyzers} - {Visual} {Studio} (windows)},
+	url = {https://learn.microsoft.com/en-us/visualstudio/code-quality/roslyn-analyzers-overview?view=vs-2022},
+	abstract = {Become familiar with source code analysis in Visual Studio. Learn about code fixes and the different types of analyzers and severity levels.},
+	language = {en-us},
+	urldate = {2023-11-16},
+	author = {{Microsoft}},
+	month = mar,
+	year = {2023},
+}
+
+@misc{microsoft_logging_2023,
+	title = {Logging in .{NET} {Core} and {ASP}.{NET} {Core}},
+	url = {https://learn.microsoft.com/en-us/aspnet/core/fundamentals/logging/?view=aspnetcore-8.0},
+	abstract = {Learn how to use the logging framework provided by the Microsoft.Extensions.Logging NuGet package.},
+	language = {en-us},
+	urldate = {2023-11-16},
+	author = {{Microsoft}},
+	month = sep,
+	year = {2023},
+}
+
 @misc{koch_global_2021,
 	title = {Global {Usings} - {A} {Look} at {New} {Language} {Features} in {C}\# 10},
 	url = {https://blog.jetbrains.com/dotnet/2021/11/18/global-usings-in-csharp-10/},
