--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,4 +1,13 @@
 
+@misc{microsoft_sidecar_nodate,
+	title = {Sidecar pattern - {Azure} {Architecture} {Center}},
+	url = {https://learn.microsoft.com/en-us/azure/architecture/patterns/sidecar},
+	abstract = {Deploy components of an application into a separate process or container to provide isolation and encapsulation.},
+	language = {en-us},
+	urldate = {2023-11-16},
+	author = {{Microsoft}},
+}
+
 @misc{microsoft_module_2023,
 	title = {Module initializers - {C}\# 9.0 draft feature specifications},
 	url = {https://learn.microsoft.com/en-us/dotnet/csharp/language-reference/proposals/csharp-9.0/module-initializers},
