--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,4 +1,21 @@
 
+@inproceedings{horowitz_engraft_2023,
+	address = {San Francisco CA USA},
+	title = {Engraft: {An} {API} for {Live}, {Rich}, and {Composable} {Programming}},
+	isbn = {9798400701320},
+	shorttitle = {Engraft},
+	url = {https://dl.acm.org/doi/10.1145/3586183.3606733},
+	doi = {10.1145/3586183.3606733},
+	language = {en},
+	urldate = {2023-11-17},
+	booktitle = {Proceedings of the 36th {Annual} {ACM} {Symposium} on {User} {Interface} {Software} and {Technology}},
+	publisher = {ACM},
+	author = {Horowitz, Joshua and Heer, Jeffrey},
+	month = oct,
+	year = {2023},
+	pages = {1--18},
+}
+
 @misc{microsoft_sidecar_nodate,
 	title = {Sidecar pattern - {Azure} {Architecture} {Center}},
 	url = {https://learn.microsoft.com/en-us/azure/architecture/patterns/sidecar},
