--- a/main.tex
+++ b/main.tex
@@ -83,7 +83,7 @@
 \include{chapters/introduction}
 \include{chapters/related-work}
 \include{chapters/implementation}
-\include{chapters/summary}
+\include{chapters/discussion}
 
 
 % new Hole("test", new {  }).Effect(() => test);
