--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,8 +1,21 @@
 
+@article{mayr_replacing_2023,
+	title = {Replacing {TODO}-{Comments} by {Applying} {Hole}-{Driven} {Development} to {C}\#: {A} {Proof} of {Concept}},
+	copyright = {All rights reserved},
+	url = {https://dl.gi.de/items/c5ab5fef-27a6-4984-a67f-de3d052acc05},
+	doi = {10.18420/MUC2023-MCI-SRC-414},
+	abstract = {Tightening the feedback loop while being able to quickly test new ideas allows programmers to stay focused. However, popular general-purpose programming languages do not provide short feedback cycles while implementing new features or fixing bugs. In this proof of concept, psychological foundations of complex problem-solving will be laid out, before the history and status quo of note-taking in programming is presented. After that, the concept of hole-driven development will be introduced. Combining these ideas will lead to a concept that enables programs that are executable, despite being incomplete. This allows programmers to gradually refine their mental models while being able to test their assumptions by already running potentially incomplete programs.},
+	language = {en},
+	urldate = {2023-11-17},
+	author = {Mayr, Bernhard},
+	year = {2023},
+	note = {Publisher: Gesellschaft für Informatik e.V.},
+	keywords = {code comments, developer experience, executable comments, hole-driven development},
+}
+
 @inproceedings{horowitz_engraft_2023,
 	address = {San Francisco CA USA},
 	title = {Engraft: {An} {API} for {Live}, {Rich}, and {Composable} {Programming}},
-	isbn = {9798400701320},
 	shorttitle = {Engraft},
 	url = {https://dl.acm.org/doi/10.1145/3586183.3606733},
 	doi = {10.1145/3586183.3606733},
