--- a/front/kurzfassung.tex
+++ b/front/kurzfassung.tex
@@ -1,1 +1,17 @@
-\todo[inline]{Write this once the thesis is finished.}
+\chapter{Kurzfassung}
+
+\begin{german} %switch to German language rules
+    Live-Programming Umgebungen ermöglichen das interaktive Explorieren von Software wodurch das Konstruieren mentaler Modelle erleichtert wird und eben diese Software besser verstanden werden kann.
+    Deren Eigenschaft von besonders kurzen Feedback-Schleifen ermöglichen das schnelle Testen neuer Ideen, ohne den Fokus zu verlieren.
+    Schnelleres und akkurateres Feedback führte außerdem zur Entwicklung agiler Vorgehensmethoden, welche durch den Fokus auf Feedback, Individuen und Kommunikation gekennzeichnet sind.
+    Auch diese weniger prozessorientierten Vorgehensmodelle profitieren von Werkzeugen, besonders wenn diese der Kommunikation dienen.
+    Betrachten man Programmieren als Spezialisierung des Forschungsgebietes des komplexen Problemlösens, sind Werkzeuge insbesondere dann hilfreich, wenn diese es schaffen die kognitive Belastung der Personen zu reduzieren.
+    Prototypen zeigen, wie sich Software verhält bzw. verhalten könnte und sind somit dazu geeignet, ein gemeinsames Verständnis über die Anforderungen von Software zu erlangen.
+    Viele der am häufigsten genutzten Programmiersprachen sind allerdings nicht darauf ausgelegt, mithilfe von kurzen Feedback-Schleifen interaktive Prototypen zu erstellen, wobei deren Programmcode so weiterentwickelt werden kann, dass die Qualität der Software Industriestandards entspricht.
+
+    Durch das Betrachten des Softwareentwicklungsprozesses als Prozess der Kommunikation, identifizierten wir bestehende Lösungen, welche dabei helfen kognitive Belastungen zu minimieren und kurze Feedback-Schleifen ermöglichen.
+    Basierend auf Todo-Kommentaren, dem Konzept des Hole-Driven Developments und kreativen Lösungen zum Markieren von unfertigen Programmteilen identifizierten wir 13 Eigenschaften von Programmteilen die als unfertig gekennzeichnet sind.
+    Basierend auf diesen Eigenschaften entwickelten wir \emph{Holey}, einen Ansatz zur Verwendung von Hole-Driven Development in der weit verbreiteten Programmiersprache \CS.
+    Wir konnten zeigen, dass es möglich ist, unter Verwendung von existierenden Sprachkonstrukten und einer erweiterbaren Bibliothek, Hole-Driven Development in \CS zu verwenden.
+    Basierend auf dieser Machbarkeitsstudie kann untersucht werden, inwieweit das Entwickeln von lediglich teils fertigen, jedoch ausführ- und weiterentwickelbaren Anwendungen Vorteile bietet.
+\end{german}
