--- a/front/abstract.tex
+++ b/front/abstract.tex
@@ -1,1 +1,13 @@
-\todo[inline]{Write this once the thesis is finished.}
+\chapter{Abstract}
+Live programming allows users to interactively explore programs for a better understanding and more accurate mental model.
+Furthermore, shorter feedback loops enable programmers to stay focused while being able to iterate on new ideas quickly.
+Shortening feedback loops by incorporating feedback as early as possible also led to the agile movement for software engineering processes, which values collaborating individuals and interactions over processes and tools.
+However, as live programming shows, tools can support various ways of interaction.
+As such, they can aid the complex problem-solving task of programming by reducing the cognitive load that stems from translating complex requirements into working software.
+Developing prototypes helps to create a shared understanding between developers and stakeholders by showing how the product under development behaves.
+However, widely used general-purpose programming languages are not optimized for tight feedback loops, allowing interactive prototypes to evolve into production-grade software.
+
+Viewing the process of programming as one of conversing with stakeholders, oneself, and the compiler, we looked at existing solutions that target dealing with cognitive load as well as tightening feedback loops and applied these findings to widely used general-purpose programming languages.
+Based on todo comments, applications of Hole-Driven Development, and creative ways of simulating holes, we defined 13 properties intrinsic to using holes in programming.
+Based on these properties, we developed \emph{Holey}, a proof of concept for applying the ideas of Hole-Driven development to the widely used general-purpose programming language \CS.
+This proof of concept can be used to investigate possible advantages regarding the usability and applicability of writing incomplete, but executable and evolvable software.
