--- a/front/preface.tex
+++ b/front/preface.tex
@@ -1,7 +1,36 @@
-\todo[inline]{Write this.}
-\todo[inline]{Integrate the next paragraph.}
-Another motivational factor for making comments executable is the author's involvement in the StateML\footnote{\url{https://www.stateml.org/}} project, which aims at providing a shared visual language for modeling event-driven behavior based on Statecharts \cite{Harel:1987}.
-This multi-modal (visual, textual, $\dotsc$) language enables the cooperative definition and development of behavior by providing live-visualizations for non-developers.
-StateML artifacts can be simulated, but the language itself is not executable, it must be embedded in a host programming language which executes all side effects.
-To fully utilize the potential of Statecharts and improve stakeholder collaboration in agile and incremental software development processes, it is necessary to partially execute those models of behavior.
-% During simulation mode, hole-driven comments can act as simulated side-effects while providing the base for future implementation via their textual description.
+\chapter{Preface}
+Finishing this thesis took longer than anticipated.
+There is a bit of backstory to this.
+After completing my first bachelor's in software engineering, I started another bachelor's in psychology, which sparked my interest in combining those seemingly contradictory research areas.
+I started researching the topic of holes in programming when I wrote my bachelor's thesis in psychology about the possibilities of combining holes with Statecharts.
+
+Shortly after this, I joined the fantastic people at StateML, where we are researching a language for modeling event-driven behavior in our spare time.
+Thank you, Chris, John, and Owen, for the countless hours of discussions about the history of software, non-conventional ideas of approaching software, and what we can learn from this.
+We already integrated some ideas around holes into StateML; therefore, I initially started working on this thesis to show how to apply Hole-Driven Development to Statecharts.
+However, your immense focus on composability reshaped my view of holes.
+As such, this thesis is about creating a framework for composable holes instead of applying it to Statecharts directly.
+But this idea is not forgotten; it was simply turned into a hole to be filled later on.
+
+Parts of the core idea of this thesis have already been presented at Mensch und Computer 23 (MuC) and published in \cite{mayr_replacing_2023}.
+Thank you, Marc, for motivating me to submit at MuC, providing feedback about my ideas, and for a great time in Switzerland.
+
+Prior to presenting at MuC, I attended the Psychology of Programming Interest Group's (PPIG) 34th annual workshop in Lund, Sweden.
+Thank you, Clayton, Luke, Leah, Anton, and Görel, for your input, and Alan, for your exceptional defense and the conversational perspective regarding programming.
+
+Speaking of input, many ideas are born, enhanced, rejected, and validated at this inspiring monthly round table with Alex, Dominik, Georg, Sebastian, and Stefan.
+You played a big part in why I returned to software development and still stick around; thanks for all the inspiring conversations about everything.
+
+Probably the people who have been most affected by me writing this thesis have been my family, flatmates, and friends.
+Thank you for all the support you provided and sorry for the times I've been unresponsive, especially Mom, Tinka, Mona, Jakob, Rosa, Daniel, David, and Marlene!
+
+I feel really privileged, that my dad had the greatest influence on this thesis.
+He challenges my beliefs, lets me challenge his, and can give me hints about decades of experience in software engineering.
+And he is also the best proofreader, knowing so many details about grammar, scientific writing, and the topics of not only my technical writings - thank you, Dad!
+
+This thesis would not have been possible without my supervisor Stephan Selinger.
+Thank you for your input, patience, trust, and flexibility, and for supervising a thesis that is not related to machine learning or large language models in 2023.
+I could still not imagine doing an Ironman after completing the 100km trail run, but I've got the feeling that writing this thesis might have brought me a little bit closer.
+
+\vspace{6ex}
+\noindent
+B.\ Mayr
