--- a/front/abstract.tex
+++ b/front/abstract.tex
@@ -5,7 +5,7 @@ Shortening feedback loops by incorporating feedback as early as possible also le
 However, as live programming shows, tools can support various ways of interaction.
 As such, they can aid the complex problem-solving task of programming by reducing the cognitive load that stems from translating complex requirements into working software.
 Developing prototypes helps to create a shared understanding between developers and stakeholders by showing how the product under development behaves.
-However, widely used general-purpose programming languages are not optimized for tight feedback loops, allowing interactive prototypes to evolve into production-grade software.
+However, widely used general-purpose programming languages are not optimized for tight feedback loops and interactive prototypes that evolve into production-grade software.
 
 Viewing the process of programming as one of conversing with stakeholders, oneself, and the compiler, we looked at existing solutions that target dealing with cognitive load as well as tightening feedback loops and applied these findings to widely used general-purpose programming languages.
 Based on todo comments, applications of Hole-Driven Development, and creative ways of simulating holes, we defined 13 properties intrinsic to using holes in programming.
