--- a/front/preface.tex
+++ b/front/preface.tex
@@ -11,7 +11,7 @@ However, your immense focus on composability reshaped my view of holes.
 As such, this thesis is about creating a framework for composable holes instead of applying it to Statecharts directly.
 But this idea is not forgotten; it was simply turned into a hole to be filled later on.
 
-Parts of the core idea of this thesis have already been presented at Mensch und Computer 23 (MuC) and published in \cite{mayr_replacing_2023}.
+Parts of the core idea of this thesis have already been presented at Mensch und Computer (MuC) 23 and published in \cite{mayr_replacing_2023}.
 Thank you, Marc, for motivating me to submit at MuC, providing feedback about my ideas, and for a great time in Switzerland.
 
 Prior to presenting at MuC, I attended the Psychology of Programming Interest Group's (PPIG) 34th annual workshop in Lund, Sweden.
@@ -20,15 +20,15 @@ Thank you, Clayton, Luke, Leah, Anton, and Görel, for your input, and Alan, for
 Speaking of input, many ideas are born, enhanced, rejected, and validated at this inspiring monthly round table with Alex, Dominik, Georg, Sebastian, and Stefan.
 You played a big part in why I returned to software development and still stick around; thanks for all the inspiring conversations about everything.
 
-Probably the people who have been most affected by me writing this thesis have been my family, flatmates, and friends.
-Thank you for all the support you provided and sorry for the times I've been unresponsive, especially Mom, Tinka, Mona, Jakob, Rosa, Daniel, David, and Marlene!
+The people who have probably been most affected by my writing this thesis are my family, flatmates, and friends.
+Thank you for all your support and sorry for the times I've been unresponsive, especially Mom, Tinka, Mona, Jakob, Rosa, Daniel, David, and Marlene!
 
-I feel really privileged, that my dad had the greatest influence on this thesis.
+I feel really privileged that my dad had the greatest influence on this thesis.
 He challenges my beliefs, lets me challenge his, and can give me hints about decades of experience in software engineering.
-And he is also the best proofreader, knowing so many details about grammar, scientific writing, and the topics of not only my technical writings - thank you, Dad!
+He is also the best proofreader, knowing so many details about grammar, scientific writing, and the topics of not only my technical writings - thank you, Dad!
 
 This thesis would not have been possible without my supervisor Stephan Selinger.
-Thank you for your input, patience, trust, and flexibility, and for supervising a thesis that is not related to machine learning or large language models in 2023.
+Thank you for your input, patience, trust, and flexibility, and for supervising a thesis unrelated to machine learning or large language models in 2023.
 I could still not imagine doing an Ironman after completing the 100km trail run, but I've got the feeling that writing this thesis might have brought me a little bit closer.
 
 \vspace{6ex}
